Changes for 1.7.0.5
* Possible fix another possible hang/freeze point causing a Could Not Block Delegate Execution error. (veqryn)

* Fixed headless game server's connect to lobby so that resetting the connection does not erase info about the game. (veqryn)

* Possible fixes two possible hang/freeze points in Server Game, one caused by a bogus ClassCastException in ClientGame, the other by a bogus NullPointerError/IllegalArgumentError in RemoteName from PlayerDelegateBridge. (veqryn)

* Making sure sound system never loads sound clips for headless game server. (veqryn)

* Added a console to automated headless game server host, which allows commands such as 'help', 'status', 'memory', 'threads', and 'quit'. (veqryn)

* Created a headless UIContext for use with headless game server, so that it may run on a linux platform that has no configured graphics environment. (veqryn)


Changes for 1.7.0.3
* Got headless game to show options to client's, for changing the game, changing to an autosave, sending a save to the server, and getting the savegame from the host. (veqryn)

* Got headless game to restart its lobby connection once per 8 hours. (veqryn)

* Got headless game server to be able to connect to lobby, and host games repeatedly without requiring any UI or swing event thread. Also got to immediately reload autosave when a player quits. (veqryn)

* Got headless game server to be able to pick games, and have a mini-ui for hosting and for during the game. (veqryn)

* Got headless game server to be able to host minimap, with the game screen headless. (veqryn)

* First pass at setting up framework for a headless game server. (veqryn)

* Preventing AA units with maxRoundsAA from getting removed early from battle. (veqryn)

* Fixed bug causing Random Territory Start delegate to fail in online games due to requesting dice too quickly. (veqryn)

* Updating Great War ww1 map and xml, to improve options and balance. (veqryn)
